backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: private
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
  namespace: private
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 253857528215.dkr.ecr.eu-central-1.amazonaws.com/backend-ecr:latest
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: private
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000     
  selector:
    app: backend
