frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: public
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
  namespace: public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        # image: doktadee/frontend:latest
        image: 253857528215.dkr.ecr.eu-central-1.amazonaws.com/frontend-ecr:0.0.1
        livenessProbe:
          httpGet:
            path: /health
            port: 4567
          initialDelaySeconds: 3
          periodSeconds: 3
        resources: # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
          limits:
            cpu: 300m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace:  public
spec:
  ports:
  - port: 4567
    targetPort: 4567
    protocol: TCP
  type: NodePort
  selector:
    app: frontend
